whitespace fix

--- a/app/assets/stylesheets/questions.scss
+++ b/app/assets/stylesheets/questions.scss
@@ -46,6 +46,7 @@
 
 .question_body {
   padding: 10px;
+  padding-top: 0px;
 }
 
 h2.heading {
